--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     padding: 0 px;
     margin: 0 px;
     box-sizing: border-box;
+    margin-bottom: 20px;
 }
 
 
@@ -10,6 +11,16 @@ body{
     display: flex;
     background: #379bf8;
 }
+
+
+
+h1{
+    color: white;
+    margin-top: 50px;
+    align-items: center;
+}
+
+
 
 #cardboard{
     width: 600px;
